# like-aho-corasick-but-different-clib

./: Cargo.toml  Makefile  build.rs
src/: lib.rs
