[package]
name = "like-aho-corasick-but-different-clib"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "like_aho_corasick_but_different"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[dependencies]
like-aho-corasick-but-different = { git = "https://github.com/nitros12/like-aho-corasick-but-different", rev = "6a8ddfac8390069543b68440483527b647bcc983" }

[build-dependencies]
cbindgen = "0.8.7"
