[package]
name = "like-aho-corasick-but-different-clib"
version = "0.1.5"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "like_aho_corasick_but_different"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[dependencies]
like-aho-corasick-but-different = { git = "https://github.com/nitros12/like-aho-corasick-but-different", tag="0.1.4-owned"}
